--- a/.github/actions/document/action.yml
+++ b/.github/actions/document/action.yml
@@ -19,7 +19,8 @@ runs:
           {
               cat $DOX_CONF_FILE
               echo "OUTPUT_DIRECTORY = ${{ inputs.path }}/doc"
-              echo "INPUT" = ${{ inputs.path }}/src ${{ inputs.path }}/include
+              echo "INPUT" = ${{ inputs.path }}/src
+              # echo "INPUT" = ${{ inputs.path }}/src ${{ inputs.path }}/include
           } > $DOX_CONF_FILE
 
           # Generate documentation
