fixed QA workflow

--- a/.github/actions/document/action.yml
+++ b/.github/actions/document/action.yml
@@ -20,7 +20,7 @@ runs:
               cat $DOX_CONF_FILE
               echo "OUTPUT_DIRECTORY = ${{ inputs.path }}/doc"
               echo "INPUT" = ${{ inputs.path }}/src
-              echo "INPUT" = ${{ inputs.path }}/src ${{ inputs.path }}/include
+              echo "INPUT" = ${{ inputs.path }}/src ${{ inputs.path }}/inc
           } > $DOX_CONF_FILE
 
           # Generate documentation
